Change the svg to png to fix clicking issue on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,11 +16,8 @@
   transition-duration: 2s;
 }
 
-embed{
-     pointer-events: none;
-}
-
 a{
+  
     display:block;
 }
 
@@ -33,9 +30,9 @@ a{
 
 .floating {
   -webkit-animation-name:floating;
-  -webkit-animation-duration: 10s;
+  -webkit-animation-duration: 15s;
   animation-name: floating;
-  animation-duration: 10s;
+  animation-duration: 15s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
@@ -45,10 +42,10 @@ a{
     -webkit-transform: translateY(0px);
   }
   25% {
-    -webkit-transform: translateY(-20px);
+    -webkit-transform: translateY(-15px);
   }  
   75% {
-    -webkit-transform: translateY(20px);
+    -webkit-transform: translateY(15px);
   }  
   100% {
     -webkit-transform: translateY(0px);
@@ -60,22 +57,21 @@ a{
     transform: translateY(0px);
   }
   25% {
-    transform: translateY(-20px);
+    transform: translateY(-15px);
   }
   75% {
-    -webkit-transform: translateY(20px);
+    -webkit-transform: translateY(15px);
   }  
   100% {
     -webkit-transform: translateY(0px);
   }
 }
 
-
 .floating2 {
   -webkit-animation-name:floating2;
-  -webkit-animation-duration: 8s;
+  -webkit-animation-duration: 12s;
   animation-name: floating;
-  animation-duration: 8s;
+  animation-duration: 12s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
@@ -100,10 +96,10 @@ a{
     transform: translateY(0px);
   }
   25% {
-    transform: translateY(20px);
+    transform: translateY(15px);
   }
   75% {
-    -webkit-transform: translateY(-15px);
+    -webkit-transform: translateY(-10px);
   }  
   100% {
     -webkit-transform: translateY(0px);
