--- a/assets/css/software.css
+++ b/assets/css/software.css
@@ -178,5 +178,5 @@
 
 .site-empty {
   background-color: #F9E0F1;
-  color:white;
+  
 }
